# ColorKEM

./: INSTALLATION_GUIDE.md  README.md
.github/workflows/: formal-verification.yml
blockchain/: blockchain_key_management.hpp  cross_chain_communication.hpp  decentralized_identity.hpp  smart_contract.hpp  transaction_signing.hpp
esp32s3/KEM/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32s3/KEM/main/: CMakeLists.txt  benchmark_color_kem_timing.cpp  main.cpp
esp32s3/KEM/src/core/: color_integration.cpp  color_kem.cpp  cpu_features.cpp  ntt_engine.cpp  ntt_scalar.cpp  performance_metrics.cpp  sampling.cpp  utils.cpp
esp32s3/KEM/src/include/clwe/: color_integration.hpp  ntt_scalar.hpp
esp32s3/KEM/tests/: test_integration_kem.cpp  test_known_answer_tests.cpp
esp32s3/KEM/tests/fuzz/: fuzz_serialization.cpp
hsm/: README.md  test_hsm_integration
hsm/include/hsm/: hsm_config.hpp  hsm_interface.hpp  pkcs11_layer.hpp  software_hsm.hpp
hsm/src/hsm/: hsm_config.cpp  software_hsm.cpp  test_hsm_integration.cpp
linux/KEM/: CMakeLists.txt  README.md  benchmark_color_kem_timing.cpp  build_linux.sh
linux/KEM/src/core/: color_kem.cpp  color_kem.hpp  color_ntt_engine.cpp  color_value.cpp  ntt_engine.cpp  ntt_neon.cpp  ntt_neon.hpp  ntt_scalar.cpp  performance_metrics_linux.cpp  sampling.cpp  shake_sampler.cpp  shake_sampler.hpp  utils.cpp  utils.hpp
linux/KEM/src/include/clwe/: clwe.hpp  color_integration.hpp  color_kem.hpp  color_ntt_engine.hpp  color_value.hpp  cpu_features.hpp  sampling.hpp  shake_sampler.hpp
linux/KEM/tests/: CMakeLists.txt  nist_kat_parser.cpp  test_known_answer_tests.cpp
macos/KEM/: CMakeLists.txt  README.md  build_macos.sh  generate_key_images.cpp  run_all_tests.sh  run_tests.sh  test_key_images.cpp
macos/KEM/src/core/: color_integration.cpp  color_kem.cpp  color_kem.hpp  color_ntt_engine.hpp  color_value.cpp  ntt_scalar.cpp  performance_metrics.cpp  performance_metrics_macos.cpp  sampling.cpp  tiny_sha3.c  utils.cpp
macos/KEM/src/include/clwe/: color_value.hpp
macos/KEM/tests/: CMakeLists.txt  test_color_kem.cpp  test_integration_kem.cpp  test_known_answer_tests.cpp  test_performance_metrics.cpp  test_serialization.cpp
protocols/: authenticated_key_exchange.hpp  certificate.hpp  key_exchange.hpp  secure_channel.hpp
verification/cryptol/: ntt.cry  polynomial_arithmetic.cry
verification/docs/: README.md
verification/saw/: verify_ntt.saw
verification/setup/: install_saw_cryptol.sh
windows/.github/workflows/: main.yaml
windows/KEM/: CMakeLists.txt  COMPATIBILITY_VERIFICATION_REPORT.md  CROSS_COMPILER_FIX_SUMMARY.md  LINKER_FIX_README.md  PATH_CONFIGURATION.md  QUICK_FIX.md  README.md  TROUBLESHOOTING_MINGWEX.md  benchmark_color_kem_timing.cpp  build_tests.bat  build_windows.bat  custom_paths.bat.example  generate_key_images.cpp  mingw-toolchain.cmake  run_all_tests.bat  run_tests.bat  test_build.ps1  test_config_system.bat  test_image_keys.cpp  test_key_images.cpp  test_path_config.cpp
windows/KEM/cmake/: FindMinGW.cmake  config.cmake  config.h.in
windows/KEM/config/: color_kem_config.ini
windows/KEM/src/core/: color_integration.cpp  color_kem.cpp  color_kem.hpp  color_ntt_engine.cpp  color_value.cpp  color_value.hpp  ntt_engine.cpp  path_config.cpp  path_config.hpp  performance_metrics_windows.cpp  sampling.cpp  shake_sampler.cpp  shake_sampler.hpp  tiny_sha3.h  utils.cpp
windows/KEM/src/include/clwe/: color_integration.hpp  color_kem.hpp  color_value.hpp  shake_sampler.hpp  version.hpp
windows/KEM/tests/: CMakeLists.txt  nist_kat_parser.hpp  test_color_kem.cpp  test_color_value.cpp  test_integration_kem.cpp  test_known_answer_tests.cpp  test_ntt_engine.cpp  test_performance_metrics.cpp  test_serialization.cpp  test_utils.cpp
windows/KEM/tests/fuzz/: fuzz_kem_operations.cpp
